# vllm-sim

./: .gitignore  agentic_coding_8k.jsonl  pyproject.toml
examples/: run_dataset.py  run_trace.py
profiles/: h100_llama8b.json
src/vllm_sim/: __init__.py  cli.py
src/vllm_sim/concur/: __init__.py  controller.py
src/vllm_sim/engine/: config.py  engine.py  request.py  scheduler.py
src/vllm_sim/kv_cache/: block.py  block_pool.py  manager.py  retention.py
src/vllm_sim/metrics/: collector.py
src/vllm_sim/timing/: model.py
src/vllm_sim/trace/: driver.py  schema.py  session.py
tests/: test_block_pool.py  test_concur.py  test_e2e.py  test_kv_cache.py  test_retention.py  test_scheduler.py
